[gd_scene load_steps=125 format=3 uid="uid://dputwpr3lovr"]

[ext_resource type="Script" path="res://Scripts/Player/player1.gd" id="1_7sjdf"]
[ext_resource type="Shader" uid="uid://bf6s3qwwuyjy0" path="res://Scenes/Player/player_hit_flash_shader.tres" id="2_0d4ye"]
[ext_resource type="Texture2D" uid="uid://cut43tmlgggh1" path="res://Assets/Player_SEED/Knight/Idle/knight-idle.png" id="3_767tk"]
[ext_resource type="Texture2D" uid="uid://bhw7w0knf0unt" path="res://Assets/Player_SEED/Knight/Death/knightdeath.png" id="3_a2tdg"]
[ext_resource type="Texture2D" uid="uid://xfabrjm4ui4v" path="res://Assets/Player_SEED/Knight/Hit damage/knighthitdamage.png" id="3_ayxyw"]
[ext_resource type="Texture2D" uid="uid://8bu7dtcak04a" path="res://Assets/Player_SEED/Knight/Jump/knightjump-toright.png" id="4_vuwtu"]
[ext_resource type="Texture2D" uid="uid://b5t3vlee72bvn" path="res://Assets/Player_SEED/Knight/Walk/knightwalk-revised2-toright.png" id="7_q5c6i"]
[ext_resource type="Texture2D" uid="uid://bewlfyrbs8mff" path="res://Assets/Player_SEED/Knight/Attack/knightattack-swing-toright-2.png" id="8_fsgpx"]
[ext_resource type="Texture2D" uid="uid://cphn0djeml7so" path="res://Assets/Player_SEED/Knight/Attack/knightattack-thrust-toright-2.png" id="9_evhqf"]
[ext_resource type="AudioStream" uid="uid://do88jsrryhwkt" path="res://Assets/Sound/Sound Effects/Player/Step(Tanah dan Batu)/Grass/2.wav" id="10_pru8p"]
[ext_resource type="Texture2D" uid="uid://c5cy586cn12d" path="res://Assets/Player_SEED/Knight/Attack/knightattack-uppercutswing-toright-2.png" id="10_wv4oy"]
[ext_resource type="Texture2D" uid="uid://fkf07ajou2se" path="res://Assets/Player_SEED/Knight/Jump/knightjump-toleft.png" id="11_6pnnm"]
[ext_resource type="AudioStream" uid="uid://bs6wglhsrnjda" path="res://Assets/Sound/Sound Effects/Player/Jump/3.wav" id="11_7gq72"]
[ext_resource type="AudioStream" uid="uid://ce041jggu6uup" path="res://Assets/Sound/Sound Effects/Player/Dash/Dash Var 1/2.wav" id="12_8vp5i"]
[ext_resource type="AudioStream" uid="uid://d0e1do3v381w" path="res://Assets/Sound/Sound Effects/Player/Player Hit/Hit.wav" id="13_iuw5c"]
[ext_resource type="Script" path="res://Scenes/Player/attack_area.gd" id="13_rnv1o"]
[ext_resource type="AudioStream" uid="uid://hhc4fu1mjd74" path="res://Assets/Sound/Sound Effects/Player/Player Died/Player Died.wav" id="14_dpr6p"]
[ext_resource type="AudioStream" uid="uid://ctcg37xb2jofl" path="res://Assets/Sound/Sound Effects/Player/Mantul/Mantul.wav" id="15_8dthq"]
[ext_resource type="AudioStream" uid="uid://domgdhh70bfom" path="res://Assets/Sound/Sound Effects/Player/Sword/Thrust-3.wav" id="16_ga0o4"]
[ext_resource type="Script" path="res://Scripts/Player/muzzle.gd" id="36_4b631"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m7vsi"]
shader = ExtResource("2_0d4ye")
shader_parameter/enabled = false
shader_parameter/hit_colour = Color(0.677073, 0, 0.079673, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_lg0m6"]
atlas = ExtResource("3_a2tdg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocxpn"]
atlas = ExtResource("3_a2tdg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6bvu"]
atlas = ExtResource("3_a2tdg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_278kw"]
atlas = ExtResource("3_a2tdg")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjwbw"]
atlas = ExtResource("3_a2tdg")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqmj5"]
atlas = ExtResource("3_a2tdg")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmbog"]
atlas = ExtResource("3_a2tdg")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2so0a"]
atlas = ExtResource("3_a2tdg")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6x58"]
atlas = ExtResource("3_a2tdg")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8c5lt"]
atlas = ExtResource("3_a2tdg")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlbjc"]
atlas = ExtResource("3_a2tdg")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_34evh"]
atlas = ExtResource("3_a2tdg")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_52d8f"]
atlas = ExtResource("3_a2tdg")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8w0ev"]
atlas = ExtResource("3_a2tdg")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xl50d"]
atlas = ExtResource("3_a2tdg")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2c37p"]
atlas = ExtResource("3_a2tdg")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_is437"]
atlas = ExtResource("3_a2tdg")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccdij"]
atlas = ExtResource("3_a2tdg")
region = Rect2(544, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_86xg1"]
atlas = ExtResource("3_a2tdg")
region = Rect2(576, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bq32"]
atlas = ExtResource("3_a2tdg")
region = Rect2(608, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vneg3"]
atlas = ExtResource("3_a2tdg")
region = Rect2(640, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_61opr"]
atlas = ExtResource("3_a2tdg")
region = Rect2(672, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ygm1"]
atlas = ExtResource("3_a2tdg")
region = Rect2(704, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qgg4"]
atlas = ExtResource("3_ayxyw")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_skn6j"]
atlas = ExtResource("3_ayxyw")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct521"]
atlas = ExtResource("3_ayxyw")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cctgr"]
atlas = ExtResource("3_ayxyw")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_530p6"]
atlas = ExtResource("3_ayxyw")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bruk0"]
atlas = ExtResource("3_ayxyw")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_umq7n"]
atlas = ExtResource("3_ayxyw")
region = Rect2(96, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hc280"]
atlas = ExtResource("3_ayxyw")
region = Rect2(112, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1lrx"]
atlas = ExtResource("3_ayxyw")
region = Rect2(128, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yp0kt"]
atlas = ExtResource("3_ayxyw")
region = Rect2(144, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad8ge"]
atlas = ExtResource("3_767tk")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_08ll0"]
atlas = ExtResource("3_767tk")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5iw0"]
atlas = ExtResource("3_767tk")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1d53"]
atlas = ExtResource("3_767tk")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rub8r"]
atlas = ExtResource("3_767tk")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdex7"]
atlas = ExtResource("3_767tk")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6spf"]
atlas = ExtResource("3_767tk")
region = Rect2(96, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_igodv"]
atlas = ExtResource("3_767tk")
region = Rect2(112, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_agjvf"]
atlas = ExtResource("3_767tk")
region = Rect2(128, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8oxa"]
atlas = ExtResource("4_vuwtu")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qikn"]
atlas = ExtResource("4_vuwtu")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7ajf"]
atlas = ExtResource("4_vuwtu")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdtgi"]
atlas = ExtResource("4_vuwtu")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp0wk"]
atlas = ExtResource("4_vuwtu")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sypdt"]
atlas = ExtResource("4_vuwtu")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrduv"]
atlas = ExtResource("4_vuwtu")
region = Rect2(96, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8exks"]
atlas = ExtResource("4_vuwtu")
region = Rect2(112, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyc75"]
atlas = ExtResource("7_q5c6i")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hgfv"]
atlas = ExtResource("7_q5c6i")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_875o3"]
atlas = ExtResource("7_q5c6i")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7lat"]
atlas = ExtResource("7_q5c6i")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3oy2"]
atlas = ExtResource("7_q5c6i")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yraw0"]
atlas = ExtResource("7_q5c6i")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_muyfa"]
atlas = ExtResource("8_fsgpx")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_biv0p"]
atlas = ExtResource("8_fsgpx")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_00nma"]
atlas = ExtResource("8_fsgpx")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpval"]
atlas = ExtResource("8_fsgpx")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpdtw"]
atlas = ExtResource("8_fsgpx")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_25it4"]
atlas = ExtResource("8_fsgpx")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qphyn"]
atlas = ExtResource("8_fsgpx")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pjde"]
atlas = ExtResource("8_fsgpx")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvc7a"]
atlas = ExtResource("8_fsgpx")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixneg"]
atlas = ExtResource("8_fsgpx")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqndv"]
atlas = ExtResource("9_evhqf")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lei08"]
atlas = ExtResource("9_evhqf")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_15eyd"]
atlas = ExtResource("9_evhqf")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3it0"]
atlas = ExtResource("9_evhqf")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gpqt"]
atlas = ExtResource("9_evhqf")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1qd3"]
atlas = ExtResource("9_evhqf")
region = Rect2(240, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_auyf3"]
atlas = ExtResource("9_evhqf")
region = Rect2(288, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8reo1"]
atlas = ExtResource("9_evhqf")
region = Rect2(336, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysf1n"]
atlas = ExtResource("9_evhqf")
region = Rect2(384, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofwg8"]
atlas = ExtResource("9_evhqf")
region = Rect2(432, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ll72c"]
atlas = ExtResource("10_wv4oy")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnims"]
atlas = ExtResource("10_wv4oy")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_atwem"]
atlas = ExtResource("10_wv4oy")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wyua"]
atlas = ExtResource("10_wv4oy")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_owx3i"]
atlas = ExtResource("10_wv4oy")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h180j"]
atlas = ExtResource("10_wv4oy")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkb1o"]
atlas = ExtResource("10_wv4oy")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_skicc"]
atlas = ExtResource("10_wv4oy")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8uog"]
atlas = ExtResource("10_wv4oy")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_db6vu"]
atlas = ExtResource("10_wv4oy")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnoti"]
atlas = ExtResource("10_wv4oy")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2q8xd"]
atlas = ExtResource("10_wv4oy")
region = Rect2(528, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdk20"]
atlas = ExtResource("10_wv4oy")
region = Rect2(576, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2baf"]
atlas = ExtResource("10_wv4oy")
region = Rect2(624, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kffup"]
atlas = ExtResource("11_6pnnm")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqus3"]
atlas = ExtResource("11_6pnnm")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_773vj"]
atlas = ExtResource("11_6pnnm")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xaltp"]
atlas = ExtResource("11_6pnnm")
region = Rect2(48, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xco0p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lg0m6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocxpn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6bvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_278kw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjwbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqmj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmbog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2so0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6x58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8c5lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlbjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34evh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52d8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8w0ev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xl50d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2c37p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_is437")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccdij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86xg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bq32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vneg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61opr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ygm1")
}],
"loop": false,
"name": &"death",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qgg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skn6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct521")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cctgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_530p6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bruk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umq7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hc280")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1lrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yp0kt")
}],
"loop": false,
"name": &"hit",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad8ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08ll0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5iw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1d53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rub8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdex7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6spf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igodv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agjvf")
}],
"loop": true,
"name": &"idle",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8oxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qikn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7ajf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdtgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp0wk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sypdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrduv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8exks")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyc75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hgfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_875o3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7lat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3oy2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yraw0")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_muyfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_biv0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00nma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpval")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpdtw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25it4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qphyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pjde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvc7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixneg")
}],
"loop": false,
"name": &"swing",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqndv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lei08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15eyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3it0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gpqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1qd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auyf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8reo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysf1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofwg8")
}],
"loop": false,
"name": &"thrust",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ll72c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnims")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_atwem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wyua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owx3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h180j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkb1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skicc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8uog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_db6vu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnoti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2q8xd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdk20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2baf")
}],
"loop": false,
"name": &"uppercut",
"speed": 23.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kffup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqus3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_773vj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xaltp")
}],
"loop": true,
"name": &"wall_slide",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mxg5v"]
size = Vector2(14, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i5luq"]
size = Vector2(22, 26)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_63q46"]
height = 34.0

[sub_resource type="Animation" id="Animation_ox3cg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Muzzle/AttackArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ylevo"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_gu4qd"]
resource_name = "punch"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Muzzle/AttackArea/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7pall"]
_data = {
"RESET": SubResource("Animation_ox3cg"),
"hit": SubResource("Animation_ylevo"),
"punch": SubResource("Animation_gu4qd")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ox0tx"]
radius = 3.0
height = 24.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 1
collision_layer = 130
collision_mask = 130
script = ExtResource("1_7sjdf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_m7vsi")
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_xco0p")
animation = &"death"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -13)
shape = SubResource("RectangleShape2D_mxg5v")

[node name="Muzzle" type="Marker2D" parent="." groups=["attack"]]
position = Vector2(18, -10)
script = ExtResource("36_4b631")

[node name="AttackArea" type="Area2D" parent="Muzzle" groups=["attack"]]
position = Vector2(0, -2)
collision_layer = 2
collision_mask = 4
script = ExtResource("13_rnv1o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Muzzle/AttackArea"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_i5luq")
disabled = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="HurtboxCollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -13)
shape = SubResource("CapsuleShape2D_63q46")
debug_color = Color(0.668258, 0.424725, 0.73905, 0.42)

[node name="HitAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7pall")
}

[node name="LeftWall" type="RayCast2D" parent="."]
position = Vector2(0, -12)
rotation = 1.5708
target_position = Vector2(-6.99995, 14)

[node name="LeftWall2" type="RayCast2D" parent="."]
position = Vector2(0, -12)
rotation = 1.5708
target_position = Vector2(10.0001, 14)

[node name="LeftWall3" type="RayCast2D" parent="."]
position = Vector2(0, -12)
rotation = 1.5708
target_position = Vector2(-17, 13.0001)

[node name="RightWall" type="RayCast2D" parent="."]
position = Vector2(0, -12)
rotation = 1.5708
target_position = Vector2(-7.00005, -14)

[node name="RightWall2" type="RayCast2D" parent="."]
position = Vector2(0, -12)
rotation = 1.5708
target_position = Vector2(8.99995, -14)

[node name="RightWall3" type="RayCast2D" parent="."]
position = Vector2(0, -12)
rotation = 1.5708
target_position = Vector2(-17, -12.9999)

[node name="dash" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="can_dash" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="attack_combo_reset" type="Timer" parent="."]
autostart = true

[node name="audio" type="Node" parent="."]

[node name="AudioStreamPlayer2D_walking" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("10_pru8p")
bus = &"SFX"

[node name="AudioStreamPlayer2D_Jump" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("11_7gq72")
bus = &"SFX"

[node name="AudioStreamPlayer2D_dash" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("12_8vp5i")

[node name="AudioStreamPlayer2D_hit" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("13_iuw5c")

[node name="AudioStreamPlayer2D_died" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("14_dpr6p")

[node name="AudioStreamPlayer2D_mantul" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("15_8dthq")

[node name="AudioStreamPlayer2D_attack" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("16_ga0o4")

[node name="CheckpointArea" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckpointArea"]
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_ox0tx")
debug_color = Color(0.190877, 0.641939, 0, 0.42)

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="dash" to="." method="_on_dash_timeout"]
[connection signal="timeout" from="can_dash" to="." method="_on_can_dash_timeout"]
[connection signal="timeout" from="attack_combo_reset" to="." method="_on_attack_combo_reset_timeout"]
